fixed the api for a user